fix SystemTimer performance and remove throw IllegalStateException